Apply minor polish to ArcContainerImpl